# rust-gilded-rose

./: Cargo.toml  README.md
src/: gilded_rose.rs  item.rs  main.rs
tests/: gilded_rose_cucumber.rs
tests/features/: perishable_items.feature  sell_in.feature
